--- a/client/index.html
+++ b/client/index.html
@@ -10,5 +10,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key="></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=&libraries=places"></script>
 </html>
